<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="repo_notification_channel_id" translatable="false">repo_channelId</string>

    <string name="button_name">Download</string>
    <string name="button_loading">We are loading…</string>
    <string name="button_with_no_selection">Please select the file to download</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="glide_radio_selection">Glide - Image loading library by BumpTech</string>
    <string name="loadapp_radio_selection">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_radio_selection">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="file_name">File Name:</string>
    <string name="status">Status:</string>
    <string name="success">Success</string>

</resources>
