<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="Cloud image from https://www.flaticon.com/de/autoren/dinosoftlabs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cloud_image" />

    <RadioGroup
        android:id="@+id/download_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_constraintBottom_toTopOf="@id/custom_button"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/glide_radio_selection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/glide_radio_selection"
            android:textSize="@dimen/default_text_size" />

        <RadioButton
            android:id="@+id/loadapp_radio_selection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loadapp_radio_selection"
            android:textSize="@dimen/default_text_size" />

        <RadioButton
            android:id="@+id/retrofit_radio_selection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retrofit_radio_selection"
            android:textSize="@dimen/default_text_size" />

    </RadioGroup>

    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        tools:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:buttonColorWhileLoading="@color/colorPrimaryDark"
        app:colorOfLoadingCircle="@color/colorAccent"/>



</androidx.constraintlayout.widget.ConstraintLayout>